# SCBank

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
resources/: en-US.ftl  ko-KR.ftl  zh-CN.ftl
src/: asset.rs  build.rs  get_time.rs  main.rs  mem_lib.rs
